--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Arial', serif;
     font-size: 100%;
@@ -42,8 +46,13 @@ p{
     position: relative;
 }
 
-.section-grey{
+.section-black{
     background-color: #404040;
+}
+
+.section-white{
+    /* background-color: #f5f5f5; */
+    background-color: #cfcfcf;
 }
 
 .section-container{
@@ -55,6 +64,37 @@ p{
     border-radius: 10px;
 }
 
+/* Nav */
+.navbar{
+    background-color: #404040;
+    /* background-color:grey; */
+    color: 	rgb(209, 113, 76);
+    box-shadow:0px 3px 20px black;
+    max-height: 50px;
+}
+
+.navbar-brand {
+    padding: 0 15px;
+    max-height: 50px;
+    line-height: 25px;
+}
+
+.navbar-toggle {
+    /* (80px - button height 34px) / 2 = 23px */
+    margin-top: 23px;
+    padding: 9px 10px !important;
+}
+
+.brand-icon{
+    background-color: rgb(209, 113, 76);
+    color: white;
+}
+
+.spacer{
+    width: 100%;
+    height:50px;
+}
+
 /* HOME */
 #home-subtitle{
     margin-top:50px;
@@ -64,12 +104,6 @@ p{
     color: 	rgb(209, 113, 76);
 }
 
-
-/* #home-menu{
-    border:1px solid white;
-    padding-top:15px;
-} */
-
 #home-menu .btn{
     /* padding:0; */
     margin-top:20px;
@@ -78,9 +112,37 @@ p{
     color: white;
 }
 
+/* About */
+#about-title{
+    background-color: rgb(209, 113, 76);;
+    text-align: center;
+}
+
+
 @media only screen and (max-width: 480px) {
     body {
       font-size:9px;
+    }
+
+    .navbar-nav > li > a {
+        /* (80px - line-height of 27px) / 2 = 26.5px */
+        /* padding-top: 26.5px;
+        padding-bottom: 26.5px;
+        line-height: 27px; */
+        
+        /* border-radius: 10px;
+        text-align: center; */
+        width: 100%;
+        margin: 0 auto 0 auto;
+    }
+
+    .navbar-nav > li{
+        background-color: #404040;
+        padding-left:20px;
+    }
+
+    .nav-item{
+        
     }
 
     #home-menu{
